fixed mobile overflow problems

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1904,7 +1904,6 @@ footer {
 @media (max-width: 800px) {
     html {
         font-size: 10px;
-        overflow: hidden;
         -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
         -webkit-tap-highlight-color: transparent;
     }
@@ -2123,7 +2122,6 @@ footer {
 @media (min-width: 800px) {
     html {
         font-size: 12px;
-        overflow: hidden;
     }
     section#profile {
         height: 18rem;
@@ -2171,7 +2169,6 @@ footer {
 @media (min-width: 1000px) {
     html {
         font-size: 9px;
-        overflow: auto;
     }
     section#profile > #user_bio_section > #bio {
         padding-bottom: 0.5rem;
