--- a/resources/assets/css/app.css
+++ b/resources/assets/css/app.css
@@ -662,7 +662,6 @@ footer {
 @media (max-width: 800px) {
     html {
         font-size: 10px;
-        overflow: hidden;
         -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
         -webkit-tap-highlight-color: transparent;
     }
@@ -889,7 +888,6 @@ footer {
 @media (min-width: 800px) {
     html {
         font-size: 12px;
-        overflow: hidden;
     }
     section#profile {
         height: 18rem;
@@ -937,7 +935,6 @@ footer {
 @media (min-width: 1000px) {
     html {
         font-size: 9px;
-        overflow: auto;
     }
     section#profile > #user_bio_section > #bio {
         padding-bottom: 0.5rem;
